[package]
name = "lvb-sim"
version = "0.1.0"
edition = "2021"
description = "Lumen VIA Beeper Simulator — W65C22S VIA 2ch beeper + pseudo 4ch arpeggio"
authors = ["Lumen65 Project"]
license = "MIT"
repository = "https://github.com/siska-tech/LVB-Sim"
keywords = ["audio", "simulator", "6502", "beeper", "retro"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "lvb-sim"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
hound      = "3"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow     = "1"
